--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="wrong_answer_text">Wrong! the correct answer is %1$s !</string>
+    <string name="correct_questions">You got %1$d questions correct!</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+    <string name="questions_deleted">Questions deleted.</string>
+    <string name="delete_dialog_message">Are you sure you want to delete the quiz?</string>
 </resources>
